# DigitNN

./: .gitignore  2048.cpp  CMakeLists.txt  README.md  canvas_test.cpp  main.cpp  main1.c
data/: weights.txt
include/: DataLoader.h  Layer.h  Matrix.h  Network.h
src/: DataLoader.cpp  Layer.cpp  Matrix.cpp  Network.cpp
